--- a/EFDemo/EFDemo.csproj
+++ b/EFDemo/EFDemo.csproj
@@ -145,14 +145,40 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202111110233185_InitialCreate.cs" />
+    <Compile Include="Migrations\202111110233185_InitialCreate.designer.cs">
+      <DependentUpon>202111110233185_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202111110619306_addedPropinStudent.cs" />
+    <Compile Include="Migrations\202111110619306_addedPropinStudent.designer.cs">
+      <DependentUpon>202111110619306_addedPropinStudent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202111110634328_addedNewTable.cs" />
+    <Compile Include="Migrations\202111110634328_addedNewTable.designer.cs">
+      <DependentUpon>202111110634328_addedNewTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MyClass.cs" />
+    <Compile Include="MyPractice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentManagementContext.cs" />
+    <Compile Include="StudentManagementInitialise.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202111110233185_InitialCreate.resx">
+      <DependentUpon>202111110233185_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111110619306_addedPropinStudent.resx">
+      <DependentUpon>202111110619306_addedPropinStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111110634328_addedNewTable.resx">
+      <DependentUpon>202111110634328_addedNewTable.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.3.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.3.0.0\build\net46\Microsoft.Data.SqlClient.SNI.targets')" />
