--- a/EfDemo2/EfDemo2.csproj
+++ b/EfDemo2/EfDemo2.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Demo2Context.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentManagementConfiguration.cs" />
+    <Compile Include="StudentManagementInitialiser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
